fix back to top spacing when there is a container div

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -178,7 +178,8 @@ body {
 }
 
 .back-to + .h2,
-.back-to + .h3 {
+.back-to + .h3,
+.back-to-container + .h3 {
   margin-top: 1.5rem;
 }
 
